---------------------------------

ENHANCEMENTS

 * #240: enabled "python -m pyftpdlib" cmdline syntax and got rid of
         "python -m pyftpdlib.ftpserver" syntax which was deprecated in 1.0.0.
 * #241: empty passwords are now allowed for anonymous and other users.
 * #244: pysendfile is no longer a dependency if we're on Python >= 3.3 as
         os.sendfile() will be used instead.

BUG FIXES

 * #238: username is not logged in case of failed authentication.
         (patch by tlockert)
 * #243: an erroneous error message is given in case the address passed to
         bind() is already in use.
 * #245: ThreadedFTPServer hogs all CPU resources after a client connects.
 * #246: ThrottledDTPHandler was broken.

INCOMPATIBLE API CHANGES

 * "python -m pyftpdlib.ftpserver" cmdline syntax doesn't work anymore


Version: 1.0.1 - Date: 2013-02-22
---------------------------------

BUG FIXES

 * #236: MultiprocessFTPServer and ThreadedFTPServer hanging in case of failed
         authentication.


Version: 1.0.0 - Date: 2013-02-19
---------------------------------

ENHANCEMENTS

 * #76:  python 3.x porting.
 * #198: full unicode support (RFC-2640).
 * #203: asyncore IO loop has been rewritten from scratch and now supports
         epoll() on Linux and kqueue() on OSX/BSD.
         Also select() (Windows) and poll() pollers have been rewritten
         resulting in pyftpdlib being an order of magnitude faster and more
         scalable than ever.
 * #204: a new FilesystemError exception class is available in order send
         custom error strings to client from an AbstracteFS subclass.
 * #207: added on_connect() and on_disconnect() callback methods to FTPHandler
         class.
 * Issues 212: provided two new classes:
           - pyftpdlib.servers.ThreadedFTPServer
           - pyftpdlib.servers.MultiprocessFTPServer  (POSIX only)
         They can be used to change the base async-based concurrecy model and